[DE190023] feat: fix and enhance AI course moderation system, upgrade to gemini-2.5-flash and resolve Java 8 compilation compatibility